# wikipediasummary

./: .gitignore  README.md  pyproject.toml  wikipedia_summary.py
model/: wikipediapage.py
wikiutil/: fetcher.py
