[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikipediasummary"
version = "1.1.4"
authors = [
  { name="Jamil Karami" },
]
description = "Utility package for fetching summaries of Wikipedia pages"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jamilkarami/wikipediasummary"
"Bug Tracker" = "https://github.com/jamilkarami/wikipediasummary/issues"